packages/kit/test/apps/basics/src/routes/errors/module-scope-client/+page.svelte
<script context="module">
	import { browser } from '$app/environment';

	if (browser) {
		throw new Error('Crashing now');
	}
</script>
